[package]
name = "ipfs-block-put"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.6"
clap = { version = "4.3", features = ["derive"] }
hyper = "0.14"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["macros", "rt"] }
