[package]
name = "ipfs-block-put"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", default-features = false, features = ["tokio"] }
clap = { version = "4.3", default-features = false, features = ["derive", "env", "error-context", "help", "std"] }
hyper = { version = "0.14", features = ["http1"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["macros", "rt"] }
